--- a/src/components/loginPage.css
+++ b/src/components/loginPage.css
@@ -24,7 +24,6 @@ html, body {
     background-color: rgb(255, 255, 255);
     justify-content: center;
     align-items: center;
-    
 }
 
 .right-container {
@@ -32,9 +31,22 @@ html, body {
 }
 
 .login-container{
+    width: 300px;
     justify-content: center;
     align-items: center;
     
+}
+.login-info{
+    
+}
+.login-username{
+    margin-bottom: 30px;
+}
+.login-password{
+    
+}
+.singin-button{
+    padding-bottom: 65px;
 }
 .login-text{
     text-align: center;
@@ -46,5 +58,9 @@ html, body {
 .login-button{
     width: 100%;
     margin-top: 30px; 
+    margin-bottom: 30px;
+}
+.registration-button{
+    width: fit-content;
 }
 
