--- a/src/components/login-signUp/loginPage.css
+++ b/src/components/login-signUp/loginPage.css
@@ -1,5 +1,3 @@
-/* src/components/loginPage.css */
-
 html, body {
     margin: 0;
     padding: 0;
@@ -9,59 +7,90 @@ html, body {
 
 .main-container {
     display: flex;
+    flex-direction: column;
     width: 100%;
     height: 100vh;
-
 }
 
 .left-container, .right-container {
     flex: 1;
     display: flex;
-    
+    justify-content: center;
+    align-items: center;
 }
 
 .left-container {
     background-color: rgb(255, 255, 255);
-    justify-content: center;
-    align-items: center;
 }
 
 .right-container {
     background-color: rgb(183, 218, 253);
 }
 
-.login-container{
-    width: 50%;
+.login-container {
+    width: 80%;
+    max-width: 400px;
     justify-content: center;
     align-items: center;
-    white-space: nowrap;
 }
 
-.login-info{
-    
+.login-info {
 }
-.login-username{
+
+.login-username {
     margin-bottom: 30px;
 }
-.login-password{
-    
+
+.login-password {
 }
-.singin-button{
+
+.singin-button {
     padding-bottom: 65px;
 }
-.login-text{
-    text-align: center;
-    
-}
-.button-text{
+
+.login-text {
     text-align: center;
 }
-.login-button{
+
+.button-text {
+    text-align: center;
+    padding-bottom: 6%;
+}
+
+.login-button {
     width: 100%;
-    margin-top: 30px; 
-    margin-bottom: 30px;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
-.registration-button{
+
+.registration-button {
     width: fit-content;
 }
 
+@media (min-width: 768px) {
+    .main-container {
+        flex-direction: row;
+    }
+
+    .left-container {
+        justify-content: center;
+    }
+
+    .right-container {
+        justify-content: center;
+    }
+
+    .login-container {
+        width: 50%;
+    }
+}
+
+@media (max-width: 767px) {
+    .login-container {
+        width: 90%;
+    }
+
+    .ant-input {
+        font-size: 16px;
+    }
+}
