--- a/src/components/login-signUp/loginPage.css
+++ b/src/components/login-signUp/loginPage.css
@@ -24,7 +24,11 @@ html, body {
 }
 
 .right-container {
-    background-color: rgb(183, 218, 253);
+    position: relative;
+    width: 100%;
+    height: 100%;
+    background: url('D:/wr1/src/assets/img-assets/landing_1.jpg') no-repeat center center;
+    background-size: cover;
 }
 
 .login-container {
@@ -32,6 +36,11 @@ html, body {
     max-width: 400px;
     justify-content: center;
     align-items: center;
+    position: relative;
+    z-index: 1;
+    background: rgba(255, 255, 255, 0.9); /* Adjust transparency as needed */
+    padding: 20px;
+    border-radius: 10px;
 }
 
 .login-info {
