--- a/src/components/order-pages/OrderList.css
+++ b/src/components/order-pages/OrderList.css
@@ -15,10 +15,12 @@
 }
 
 .order-card {
-  width: 300px;
+  width: 100%; /* Set width to 100% for responsiveness */
+  max-width: 300px; /* Set max width */
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 15px; /* Decreased padding for mobile */
+  box-sizing: border-box; /* Include padding in width */
 }
 
 .order-card-footer {
@@ -41,5 +43,35 @@
 
 .ant-badge.ant-badge-status .ant-badge-status-text {
   margin-inline-start: -2px;
-  
+}
+
+@media (max-width: 768px) {
+  .card-container {
+    justify-content: center; /* Center cards on mobile */
+    gap: 10px; /* Reduce gap between cards */
+  }
+
+  .order-card {
+    width: calc(100% - 40px); /* Make cards full-width with some margin */
+    margin: 10px; /* Add margin to center cards */
+    padding: 10px !important; /* Further reduce padding */
+  }
+
+  .order-card .ant-typography, .order-card .ant-typography-secondary {
+    font-size: 14px; /* Adjust text size for better fitting */
+  }
+
+  .order-card .order-card-switch, .order-card .order-card-footer {
+    flex-direction: column; /* Stack elements vertically */
+    align-items: flex-start; /* Align text to the left */
+  }
+
+  .order-card-switch {
+    white-space: normal; /* Allow text to wrap */
+  }
+}
+
+.ant-table-thead th {
+  text-transform: uppercase;
+  letter-spacing: 0.02em;
 }
