--- a/src/components/order-pages/OrderList.css
+++ b/src/components/order-pages/OrderList.css
@@ -15,13 +15,13 @@
 }
 
 .order-card {
-  width: 100%; /* Set width to 100% for responsiveness */
-  max-width: 300px; /* Set max width */
+  width: 100%;
+  max-width: 300px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 15px; /* Decreased padding for mobile */
-  box-sizing: border-box; /* Include padding in width */
-  position: relative; /* For the absolute positioned delete icon */
+  padding: 15px;
+  box-sizing: border-box;
+  position: relative;
 }
 
 .order-card-footer {
@@ -34,7 +34,7 @@
 .order-card-switch {
   display: flex;
   align-items: center;
-  white-space: nowrap; /* Ensure text stays on one line */
+  white-space: nowrap;
 }
 
 .ant-badge-status {
@@ -48,27 +48,29 @@
 
 @media (max-width: 768px) {
   .card-container {
-    justify-content: center; /* Center cards on mobile */
-    gap: 10px; /* Reduce gap between cards */
+    justify-content: center;
+    gap: 10px;
   }
 
   .order-card {
-    width: calc(100% - 40px); /* Make cards full-width with some margin */
-    margin: 10px; /* Add margin to center cards */
-    padding: 10px !important; /* Further reduce padding */
+    width: calc(100% - 40px);
+    margin: 10px;
+    padding: 10px !important;
   }
 
-  .order-card .ant-typography, .order-card .ant-typography-secondary {
-    font-size: 14px; /* Adjust text size for better fitting */
+  .order-card .ant-typography,
+  .order-card .ant-typography-secondary {
+    font-size: 14px;
   }
 
-  .order-card .order-card-switch, .order-card .order-card-footer {
-    flex-direction: column; /* Stack elements vertically */
-    align-items: flex-start; /* Align text to the left */
+  .order-card .order-card-switch,
+  .order-card .order-card-footer {
+    flex-direction: column;
+    align-items: flex-start;
   }
 
   .order-card-switch {
-    white-space: normal; /* Allow text to wrap */
+    white-space: normal;
   }
 }
 
@@ -82,5 +84,5 @@
   top: 8px;
   right: 8px;
   cursor: pointer;
-  color: #ff4d4f; /* Red color for the delete icon */
+  color: #ff4d4f;
 }
