--- a/src/components/customers/Customers.css
+++ b/src/components/customers/Customers.css
@@ -4,7 +4,8 @@
   }
   
   .standard-roll-card .ant-card-head {
-    background-color: #e6f4ff;
+    background-color: #1677ff;
+
   }
   
   .standard-roll-card .ant-card-body {
