--- a/src/components/order-pages/OrderList.css
+++ b/src/components/order-pages/OrderList.css
@@ -5,6 +5,20 @@
   margin-bottom: 16px;
 }
 
+.search-sort-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.left-controls {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
 .card-container {
   display: flex;
   gap: 20px;
@@ -29,7 +43,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 8px;
-  margin-right : 5px;
+  margin-right: 5px;
 }
 
 .order-card-switch {
@@ -48,6 +62,23 @@
 }
 
 @media (max-width: 768px) {
+  .search-sort-container {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .left-controls {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .left-controls > * {
+    margin-right: 0;
+    margin-bottom: 10px;
+    width: 100%;
+  }
+
   .card-container {
     justify-content: center;
     gap: 10px;
@@ -79,5 +110,3 @@
   text-transform: uppercase;
   letter-spacing: 0.02em;
 }
-
-
